--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
-<html>
-	<div>
-		<h1><strong>My Postcard</strong></h1>
-	</div>
-	<div>
-		<p>Look how awesome. This is a postcard that i created using HTML and CSS during my 4Geeks academy Course!</p>
-		<br />
-		<p2>This is so cool, can't wait to start doing more stuff!</p2>
-	</div>
-	<div><img src="https://raw.githubusercontent.com/breatheco-de/exercise-postcard/main/.learn/assets/4geeks.png" /></div>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+		<link rel="stylesheet" href="styles.css" />
+	</head>
+	<body>
+		<div class="postcard">
+			<div class="postcard-header">
+				<h1>My postcard</h1>
+				<img
+					src="https://raw.githubusercontent.com/breatheco-de/exercise-postcard/e63a7916530cc850bd92aa1c2e19191837fb5c80/.learn/assets/4geeks.png
+			  "
+				/>
+			</div>
+			<div class="postcard-body"></div>
+			<p1> </p1>
+			<div class="postcard-footer"></div>
+		</div>
+	</body>
 </html>
