This is my postcard

--- a/index.html
+++ b/index.html
@@ -15,9 +15,18 @@
 			  "
 				/>
 			</div>
-			<div class="postcard-body"></div>
-			<p1> </p1>
-			<div class="postcard-footer"></div>
+			<div class="postcard-body">
+				<div class="body-left">
+					<p>Look how awsome! This is a postcard that i created using HTML & CSS.</p>
+					<p>This is so cool, cant wait to start doing more stuff</p>
+				</div>
+				<div class="body-right"><input type="text" /> <input type="text" /> <input type=""text"></div>
+			</div>
+			<footer>
+				<div class="postcard-footer">
+					<button>Send My Postcard</button>
+				</div>
+			</footer>
 		</div>
 	</body>
 </html>
